--- a/frontend/sge-app/public/index.html
+++ b/frontend/sge-app/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My App</title>
+    <link rel="stylesheet" href="/frontend/sge-app/public/reset.css" />
     <!-- Google Fonts -->
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap");
